Fri Nov  2 20:11:17 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#timestamp_file): remove @ which looks like
	  configure variables.

	* lib/mkmf.rb (MakeMakefile#timestamp_file): use .-. instead of !, a
	  special character of NMAKE and BSD make.  [Bug #7265]

Fri Nov  2 17:55:39 2012  Shota Fukumori  <sorah@tubusu.net>

	* lib/test/unit.rb (_run_parallel): Delete status line before showing
	  results. Patch by Hiroshi Shirosaki. [Bug #6897] [ruby-core:47250]

	* lib/test/unit.rb (_run_parallel): Fix strange result when disabled retrying.
	  Patch by Hiroshi Shirosaki. [Bug #6897] [ruby-core:47250]

Fri Nov  2 17:52:12 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* object.c (rb_mod_to_s): Module#{to_s,inspect}, when invoked on
	  a refinement, returns a string in the format #<refinement:C@M>,
	  where C is a refined class and M is a module at which the refinemet
	  is defined.

	* eval.c (rb_mod_refine): store information on a refinement for the
	  above change.

	* test/ruby/test_refinement.rb: related test.

Fri Nov  2 16:57:52 2012  Shota Fukumori  <sorah@tubusu.net>

	* vm_dump.c (rb_vm_bugreport): Because of many log directories,
	  making directory lists readable.

Fri Nov  2 16:44:00 2012  Kenta Murata  <mrkn@mrkn.jp>

	* vm_dump.c (rb_vm_bugreport): add ~/Library/Logs/DiagnosticReports
	  in the locations list of crash reports.

Fri Nov  2 14:52:52 2012  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (recursive_equal): performance improvement by avoiding
	  overhead to call rb_ary_elt().
	  [ruby-dev:45412] [Feature #6177]

Fri Nov  2 14:47:53 2012  Shugo Maeda  <shugo@ruby-lang.org>

	* string.c (sym_to_proc, sym_call): A Proc created by Symbol#to_proc
	  should close over the current refinements.
	  [ruby-dev:46345] [Bug #7261]

	* vm_eval.c (rb_call0, rb_search_method_entry,
	  rb_funcall_passing_block_with_refinements): add a new argument
	  `refinements' for the above changes.
