@@ -543,9 +543,49 @@ assert_equal %Q{ENSURE\n}, %q{
     end
   end
   e = Bug5234.new
+}],
+ ['[ruby-dev:45656]', %q{
+  class Bug6460
+    include Enumerable
+    def each
+      begin
+        yield :foo
+      ensure
+        1.times { Proc.new }
+      end
+    end
+  end
+  e = Bug6460.new
 }]].each do |bug, src|
   assert_equal "foo", src + %q{e.detect {true}}, bug
   assert_equal "true", src + %q{e.any? {true}}, bug
   assert_equal "false", src + %q{e.all? {false}}, bug
   assert_equal "true", src + %q{e.include?(:foo)}, bug
 end
+
+assert_equal "foo", %q{
+  class Bug6460
+    def m1
+      m2 {|e|
+        return e
+      }
+    end
+
+    def m2
+      begin
+        yield :foo
+      ensure
+        begin
+          begin
+            yield :foo
+          ensure
+            Proc.new
+            raise ''
+          end
+        rescue
+        end
+      end
+    end
+  end
+  Bug6460.new.m1
+}, '[ruby-dev:46372]'
