@@ -1,3 +1,9 @@
+Sat Nov  3 04:14:19 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm.c (rb_vm_rewrite_ep_in_errinfo): rewrite all catch points in
+	  errinfo, not only the topmost frame.  based on the patch by
+	  ktsj (Kazuki Tsujimoto) in [ruby-dev:45656]. [Bug #6460]
+
 Fri Nov  2 20:11:17 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (MakeMakefile#timestamp_file): remove @ which looks like
